--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,13 @@
 <h1>Login</h1>
 
+<% if(typeof errors !== 'undefined') { %>
+    <ul>
+        <% errors.forEach(function(error) { %>
+            <li><%= error.msg %></li>
+        <% }) %>
+    </ul>
+<% } %>
+
 <form action="/login" method="post">
     <div>
         <label for="email"> Email </label>
